<?xml version="1.0" encoding="utf-8"?>
<!--
      strings
      ArmBot Android Application

      Created by Anthony FERREYROLLES on 18/01/2022.
      Copyright © 2022 ArmBot. All rights reserved.
-->

<resources>
    <string name="app_name">ArmBot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ArmBot</string>
    <string name="nav_header_subtitle">Control your arm, control your life</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_controller">Controller</string>
    <string name="menu_settings">Settings</string>

    <string name="home_welcome_message">Welcome to the ArmBot controller application</string>
    <string name="home_enter_button">Enter</string>

    <string name="str_menu_search_devices">Search Devices</string>
    <string name="str_menu_bluetooth_on">Switch On Bluetooth</string>
    <string name="str_menu_search_devices_start">Start Devices Search</string>

    <string name="str_paired_devices">Paired Devices</string>
    <string name="str_available_devices">Available Devices</string>
    <string name="str_menu_scan_devices">Scan Devices</string>

    <string name="controller_configuration_text">Control the robotic arm with the following widgets:</string>
    <string name="controller_Right_Left_text">Right / Left</string>
    <string name="controller_Back_Front_text">Backward / Forward</string>
    <string name="controller_Up_Down_text">Up    / Down</string>
    <string name="controller_Rotation_text">Rotation</string>
    <string name="controller_Open_Closed_text">Open  / Closed</string>
    <string name="controller_reset_button_text">Reset</string>

    <string name="controller_up_arrow">Up Arrow</string>
    <string name="controller_right_arrow">Right Arrow</string>
    <string name="controller_left_arrow">Left Arrow</string>
    <string name="controller_down_arrow">Down Arrow</string>
    <string name="controller_forward_arrow">Forward Arrow</string>
    <string name="controller_backward_arrow">Backward Arrow</string>
    <string name="controller_open_arrow">Open Arrow</string>
    <string name="controller_close_arrow">Close Arrow</string>

    <string name="controller_up_arrow_text">Up</string>
    <string name="controller_right_arrow_text">Right</string>
    <string name="controller_left_arrow_text">Left</string>
    <string name="controller_down_arrow_text">Down</string>
    <string name="controller_forward_arrow_text">Forward</string>
    <string name="controller_backward_arrow_text">Backward</string>
    <string name="controller_open_arrow_text">Open</string>
    <string name="controller_close_arrow_text">Close</string>
    <string name="controller_right_rotation_arrow_text">Right Rotation</string>
    <string name="controller_left_rotation_arrow_text">Left Rotation</string>

    <string name="controller_seekbar_buttons_text">Seekbars</string>
    <string name="controller_buttons_text">Buttons</string>

    <string name="settings_arm_speed_text">Arm Speed:</string>
    <string name="settings_arm_speed_0_5">x 0.5</string>
    <string name="settings_arm_speed_0_75">x 0.75</string>
    <string name="settings_arm_speed_1">x 1</string>
    <string name="settings_arm_speed_1_25">x 0.25</string>
    <string name="settings_arm_speed_1_5">x 1.5</string>
</resources>