<?xml version="1.0" encoding="utf-8"?>
<!--
      activity_main_drawer
      ArmBot Android Application

      Created by Anthony FERREYROLLES on 18/01/2022.
      Copyright © 2022 ArmBot. All rights reserved.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_controller"
            android:icon="@drawable/controller_icon"
            android:title="@string/menu_controller" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/menu_settings" />
    </group>
</menu>